--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="profile">Profile</string>
     <string name="liked_songs">Liked Songs</string>
     <string name="n_songs">%1$d songs</string>
+    <string name="onboarding_description">New way for working out and listening to fantastic music at the same time.</string>
+    <string name="motto_2">Listen.</string>
+    <string name="motto_1">Practice.</string>
+    <string name="get_started">Get Started!</string>
+    <string name="login_with_spotify">Login with Spotify</string>
+    <string name="spotify_not_found">Spotify client is not installed</string>
+    <string name="install_now">Install Now</string>
+    <string name="onboarding_welcome">Welcome to Ceria!</string>
 </resources>
