Start session use case

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="increment_bpm">Increment bpm</string>
     <string name="decrement_bpm">Decrement bpm</string>
     <string name="listening_to_your_heartbeat">Listening to your heartbeat</string>
+    <string name="error_when_starting_session">Error when starting session</string>
 </resources>
